# discord-agents

./: .gitignore  CLAUDE.md  README.md  SETUP.md  discord_agents.opam  dune-project  flake.nix
lib/: agent_process.ml  agent_runner.ml  bot.ml  build_info.ml  channel_manager.ml  channel_manager.mli  claude_sessions.ml  codex_sessions.ml  command.ml  config.ml  control_api.ml  discord_agents.ml  discord_gateway.ml  discord_rest.ml  discord_types.ml  dune  gemini_sessions.ml  ids.ml  project.ml  resource.ml  session.ml  session_store.ml  websocket.ml
planning/: EXECPLAN.md
scripts/: gen-build-info.sh  mcp-server.py  mcp.json  run-branch.sh
test/: dune  test_agent_contracts.ml  test_formatting.ml  test_project.ml
